 -- AccountingStoreFlags=job_env allows you to store the job's env vars.
 -- configure: the --with option handling has been made consistent across the
    various optional libraries. Specifying --with-foo=/path/to/foo will only
    check that directory for the applicable library (rather than, in some cases,
    falling back to the default directories), and will always error the build
    if the library is not found (instead of a mix of error messages and non-
    fatal warning messages).
 -- configure: replace --with-rmsi_dir option with proper handling for
    --with-rsmi=dir.

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================
 -- Errors detected in the parser handlers due to invalid configurations are now
    propagated and can lead to fatal (and thus exit) the calling process.
 -- Enforce a valid configuration for AccountingStorageEnforce in slurm.conf.
    If the configuration is invalid, then an error message will be printed and
    the command or daemon (including slurmctld) will not run.
 -- Removed AccountingStoreJobComment option.  Please update your config to use
    AccountingStoreFlags=job_comment instead.
 -- Removed DefaultStorage{Host,Loc,Pass,Port,Type,User} options.
 -- Removed CacheGroups, CheckpointType, JobCheckpointDir, MemLimitEnforce,
    SchedulerPort, SchedulerRootFilter options.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Changed the --format handling for negative field widths (left justified)
    to apply to the column headers as well as the printed fields.
 -- Invalidate multiple partition requests when using partition based
    associations.
 -- --cpus-per-task and --threads-per-core now imply --exact.
    This fixes issues where steps would be allocated the wrong number of CPUs.

API CHANGES
===========
 -- jobcomp plugin: change plugin API to jobcomp_p_*().