@@ -59,8 +59,8 @@ typedef struct slurm_sched_ops {
  * Must be synchronized with slurm_sched_ops_t above.
  */
 static const char *syms[] = {
-	"slurm_sched_p_initial_priority",
-	"slurm_sched_p_reconfig",
+	"sched_p_initial_priority",
+	"sched_p_reconfig",
 };
 
 static slurm_sched_ops_t ops;
@@ -74,7 +74,7 @@ static bool init_run = false;
  * slurmctld must be restarted and job priority changes may be
  * required to change the scheduler type.
  */
-extern int slurm_sched_init(void)
+extern int sched_g_init(void)
 {
 	int retval = SLURM_SUCCESS;
 	char *plugin_type = "sched";
@@ -104,7 +104,7 @@ done:
 	return retval;
 }
 
-extern int slurm_sched_fini(void)
+extern int sched_g_fini(void)
 {
 	int rc;
 
@@ -120,9 +120,9 @@ extern int slurm_sched_fini(void)
 	return rc;
 }
 
-extern int slurm_sched_g_reconfig(void)
+extern int sched_g_reconfig(void)
 {
-	if ( slurm_sched_init() < 0 )
+	if (sched_g_init() < 0)
 		return SLURM_ERROR;
 
 	gs_reconfig();
@@ -130,10 +130,10 @@ extern int slurm_sched_g_reconfig(void)
 	return (*(ops.reconfig))();
 }
 
-extern uint32_t slurm_sched_g_initial_priority(uint32_t last_prio,
-					       job_record_t *job_ptr)
+extern uint32_t sched_g_initial_priority(uint32_t last_prio,
+					 job_record_t *job_ptr)
 {
-	if ( slurm_sched_init() < 0 )
+	if (sched_g_init() < 0)
 		return SLURM_ERROR;
 
 	return (*(ops.initial_priority))( last_prio, job_ptr );
