@@ -47,14 +47,14 @@
  *
  * Returns a Slurm errno.
  */
-int slurm_sched_init(void);
+extern int sched_g_init(void);
 
 /*
  * Terminate sched plugin, free memory.
  *
  * Returns a Slurm errno.
  */
-extern int slurm_sched_fini(void);
+extern int sched_g_fini(void);
 
 /*
  **************************************************************************
@@ -65,12 +65,12 @@ extern int slurm_sched_fini(void);
 /*
  * Perform reconfig, re-read any configuration files
  */
-int slurm_sched_g_reconfig(void);
+extern int sched_g_reconfig(void);
 
 /*
  * Supply the initial priority for a newly-submitted job.
  */
-extern uint32_t slurm_sched_g_initial_priority(uint32_t max_prio,
-					       job_record_t *job_ptr);
+extern uint32_t sched_g_initial_priority(uint32_t max_prio,
+					 job_record_t *job_ptr);
 
 #endif /*__SLURM_CONTROLLER_SCHED_PLUGIN_API_H__*/
