@@ -66,3 +66,4 @@ COMMAND CHANGES (see man pages for details)
 API CHANGES
 ===========
  -- jobcomp plugin: change plugin API to jobcomp_p_*().
+ -- sched plugin: change plugin API to sched_p_*().
